完善：代理认证；修复一些已知问题